# myNXP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  refactoring.sh
wireless_uart_freertos/: CMakeLists.txt  all_lib_device.cmake  config.cmake  flags.cmake  mcux_include.json  wireless_uart_freertos.mex
wireless_uart_freertos/ble_controller/: middleware_wireless_controller_api.cmake
wireless_uart_freertos/ble_controller/interface/: controller_api.h  hybrid_gfsk.h
wireless_uart_freertos/ble_controller/src/: controller_api.c
wireless_uart_freertos/ble_controller/src/hybrid_gfsk/: hybrid_gfsk.c
wireless_uart_freertos/bluetooth/: middleware_wireless_ble_gatt_db.cmake  middleware_wireless_ble_gatt_service_discovery.cmake  middleware_wireless_ble_hci_transport_rpmsg.cmake  middleware_wireless_ble_host.cmake  middleware_wireless_ble_host_common.cmake  middleware_wireless_ble_profiles_battery_service.cmake  middleware_wireless_ble_profiles_wireless_uart.cmake
wireless_uart_freertos/bluetooth/application/common/: ble_conn_manager.c  ble_host_task_config.h  ble_service_discovery.c  ble_service_discovery.h  ieee11073.h
wireless_uart_freertos/bluetooth/hci_transport/interface/: hci_transport.h
wireless_uart_freertos/bluetooth/hci_transport/source/: hcit_generic_adapter_interface.c
wireless_uart_freertos/bluetooth/host/config/: ble_config.h  ble_globals.c
wireless_uart_freertos/bluetooth/host/interface/: att_callbacks.h  att_errors.h  ble_constants.h  ble_general.h  ble_host_tasks.h  ble_sig_defines.h  ble_utils.h  gap_interface.h  gap_types.h  gatt_database.h  gatt_db_app_interface.h  gatt_interface.h  gatt_types.h  hci_interface.h  hci_types.h  vendor_debug_commands.h
wireless_uart_freertos/bluetooth/port/: fwk_generic_list.c  fwk_generic_list.h  fwk_mem_manager.h  fwk_messaging.c  fwk_messaging.h  fwk_os_abs.c  fwk_os_abs.h  fwk_panic.h  fwk_seclib.h  fwk_timer_manager.c  fwk_timer_manager.h
wireless_uart_freertos/framework/: middleware_wireless_framework.cmake  middleware_wireless_framework_function_lib.cmake  middleware_wireless_framework_heap_mem_manager.cmake  middleware_wireless_framework_hw_parameter.cmake  middleware_wireless_framework_lowpower.cmake  middleware_wireless_framework_module_info.cmake  middleware_wireless_framework_nvm.cmake  middleware_wireless_framework_nvm_interval_policy_none.cmake  middleware_wireless_framework_platform.cmake  middleware_wireless_framework_platform_ble.cmake  middleware_wireless_framework_platform_crypto.cmake  middleware_wireless_framework_platform_ics.cmake  middleware_wireless_framework_platform_lowpower.cmake  middleware_wireless_framework_platform_lowpower_timer.cmake  middleware_wireless_framework_platform_rng.cmake  middleware_wireless_framework_platform_sensors.cmake  middleware_wireless_framework_seclib_rng.cmake  middleware_wireless_framework_seclib_rng_port_secure_subsystem.cmake  middleware_wireless_framework_sensors.cmake  middleware_wireless_framework_systicks.cmake  middleware_wireless_framework_workq.cmake
wireless_uart_freertos/framework/Common/: fwk_errno.h  fwk_hal_macros.h
wireless_uart_freertos/mcmgr/: middleware_multicore_mcmgr.cmake  middleware_multicore_mcmgr_mcxw716.cmake
wireless_uart_freertos/rpmsg-lite/: middleware_multicore_rpmsg-lite.cmake  middleware_multicore_rpmsg-lite_frdmmcxw7x.cmake  middleware_multicore_rpmsg-lite_freertos.cmake  middleware_multicore_rpmsg-lite_mcxw71x.cmake
wireless_uart_freertos/secure-subsystem/: middleware_secure-subsystem.MCXW716C.cmake  middleware_secure-subsystem_elemu.MCXW716C.cmake  middleware_secure-subsystem_elemu_port_kw45_k4w1.MCXW716C.cmake  middleware_secure-subsystem_mu.MCXW716C.cmake
wireless_uart_freertos/secure-subsystem/inc/: fsl_sscp.h  fsl_sscp_commands.h  fsl_sscp_config.h  fsl_sscp_mu.h  fsl_sss_api.h  fsl_sss_config.h  fsl_sss_mgmt.h  fsl_sss_sscp.h  fsl_sss_sscp_config.h
wireless_uart_freertos/source/: FreeRTOSConfig_Gen.h  app.h  app_advertiser.c  app_advertiser.h  app_ble_init.c  app_config.c  app_conn.c  app_conn.h  app_connection.c  app_nvm.c  app_preinclude.h  app_preinclude_common.h  app_scanner.c  app_scanner.h  app_services_init.c  ble_init.c  ble_init.h  board.c  board.h  board_comp.c  board_comp.h  board_dcdc.c  board_dcdc.h  board_lp.c  board_lp.h  board_platform.h  clock_config.c  clock_config.h  example_board_readme.md  gatt_uuid128.h  hardware_init.c  main.c  mcux_config.h  pin_mux_lp.h  readme.md  wireless_uart.c
(+132 files in other folders)
